Change style for apple-barrel-container class to fix jumping image in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,10 +237,10 @@ https://www.geeksforgeeks.org/css-floating-animation/
     
     .apple-barrel-container {
         position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%, -10%);
-        text-align: center;
+        bottom: 30%;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
     }
 
     .image-gameplay {
@@ -279,10 +279,10 @@ https://www.geeksforgeeks.org/css-floating-animation/
 @media screen and (min-width: 992px) {
     .apple-barrel-container {
         position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%, -30%);
-        text-align: center;
+        bottom: 30%;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
     }
 
     .text-header {
